@@ -8,6 +8,8 @@
 #include "parser.h"
 #include "lexer.h"
 
+#define XSTRINGIFY(s) STRINGIFY(s)
+#define STRINGIFY(s) #s
 
 /* The bison header file does not contain this... silly. */
 extern int yyparse(void);
@@ -270,7 +272,7 @@ PyMODINIT_FUNC PyInit__parser(void)
     /* Provide the source hash to the parser module for verification that the
      * extension module is up-to-date. */
     /* uint64_t int_source_hash = #PARSER_SOURCE_HASH; */
-    PyObject* source_hash = PyUnicode_FromString(PARSER_SOURCE_HASH);
+    PyObject* source_hash = PyUnicode_FromString(XSTRINGIFY(PARSER_SOURCE_HASH));
     PyObject_SetAttrString(module, "SOURCE_HASH", source_hash);
 
     /* Import the module that defines the missing object constant. */
